cf-envoyproxy-gateway-api/4-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sampleapp-http-route
spec:
  parentRefs:
    - name: external-gateway
      sectionName: http
      namespace: gateway
  hostnames:
    - app.lowsandbox.com
    - app2.lowsandbox.com
  rules:
    - backendRefs:
        - kind: Service
          name: node-service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
